fix search on mobile

--- a/src/ui/styles/action-bar.css
+++ b/src/ui/styles/action-bar.css
@@ -48,6 +48,10 @@
   top: auto;
   bottom: auto;
 }
+.is-mobile .search-x-btn {
+  position: static !important;
+  margin-inline-start: .5em;
+}
 .actions-search-input input {
   min-width: 250px;
   padding: 1.5em 3em 1.5em 1em;
@@ -56,8 +60,8 @@
   border-radius: 3em;
   color: var(--text-muted);
 }
-.is-mobile .actions-search-input {
-  min-width: max-content  !important;
+.is-mobile .actions-search-input input {
+  width: max-content  !important;
 }
 /* Search active (mobile): stretch input to full width, hide extras */
 .is-mobile #explorer-actions.search-active .action-add-btns,
